--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
 {
-    "name": "root/html",
-    "authors": [
-        {
-            "name": "flevanti",
-            "email": "francesco@levanti.net"
-        }
-    ],
-    "require": {}
+  "name": "flevanti/github-changes-parser",
+  "authors": [
+    {
+      "name": "flevanti",
+      "email": "francesco@levanti.net"
+    }
+  ],
+  "require": {
+    "php": ">=5.6.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "flevanti\\githubChangesParser\\": "src\\flevanti\\githubChangesParser"
+    }
+  }
 }
