--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
   "name": "flevanti/github-changes-parser",
   "type": "library",
+  "description": "",
   "license": "APACHE2",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "authors": [
     {
       "name": "flevanti",
