--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "",
   "license": "APACHE2",
   "version": "1.0.0",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "authors": [
     {
       "name": "flevanti",
