--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,16 @@
   "minimum-stability": "stable",
   "authors": [
     {
-      "name": "flevanti",
+      "name": "francesco levanti",
       "email": "francesco@levanti.net"
     }
   ],
   "require": {
-    "php": ">=5.6.0"
+    "php": ">=5.3.0"
   },
   "autoload": {
     "psr-4": {
-      "flevanti\\GithubChangesParser\\": "src/flevanti/GithubChangesParser"
+      "flevanti\\GithubChangesParser\\": "src/GithubChangesParser"
     }
   }
 }
